Fix Java 8 build and runtime guards