@@ -206,8 +206,6 @@ public final class ContainerManager {
     pendingContextIdToResourceSpec.put(executorId, resourceSpecification);
 
     final JVMProcess jvmProcess = jvmProcessFactory.newEvaluatorProcess()
-      .addOption("--add-opens=java.base/java.lang=ALL-UNNAMED")
-      .addOption("--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED")
       .addOption("-XX:-OmitStackTraceInFastThrow")
       .addOption("-XX:NewRatio=1")
       .addOption("-XX:InitialHeapSize=" + (resourceSpecification.getMemory() - 100) + "m")
